Update pom.xml per guide
https://www.spigotmc.org/wiki/creating-a-blank-spigot-plugin-in-vs-code/

--- a/spigot-plugin/popular-block-storage/pom.xml
+++ b/spigot-plugin/popular-block-storage/pom.xml
@@ -10,7 +10,7 @@
 
   <name>popular-block-storage</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/cceckman/popular-block-storage</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,9 +25,24 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+      </dependency>
   </dependencies>
 
   <build>
+    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <includes>
+          <include>plugin.yml</include>
+        </includes>
+      </resource>
+    </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
