Buildable (linkable?) plugin that runs a background thread

--- a/spigot-plugin/popular-block-storage/pom.xml
+++ b/spigot-plugin/popular-block-storage/pom.xml
@@ -25,12 +25,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-      </dependency>
+    <dependency>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot-api</artifactId>
+        <version>1.15.2-R0.1-SNAPSHOT</version>
+        <scope>system</scope>
+        <systemPath>${basedir}/../../spigot/output/spigot-api-shaded.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
