--- a/spigot/server.properties
+++ b/spigot/server.properties
@@ -1,4 +1,9 @@
 server-port=4601
 motd=Linux-Integrated Block Storage Device
+# Make it easier for a demo:
 level-type=flat
 spawn-monsters=false
+spawn-animals=false
+gamemode=creative
+# Load faster.
+allow-nether=true
